<resources>
    <string name="app_name">Calories Calculator</string>
    <string name="breakfast">Breakfast</string>
    <string name="secondBreakfast">Second Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>
    <string name="tvDisplayingDate">Day</string>
    <string name="searchForProducts">Type here name of the product</string>
    <!-- Sliding menu  -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profileWelcome">Welcome</string>
    <string name="exampleProfileName">Thomas</string>
    <string name="tvProfileSettingsLabel">Profile settings</string>
    <!-- Profile setup  -->
    <string name="pSNicknameLabel">Nickname</string>
    <string name="pSNicknameET">Enter nickname</string>
    <string name="pSNextBTN">Next</string>
    <string name="pSAgeLabel">Age</string>
    <string name="psAgeET">Enter age</string>
    <string name="pSGenderLabel">Choose your gender</string>
    <string name="pSHeightLabel">Enter height</string>
    <string name="pSHeightET">Height (cm)</string>
    <string name="pSWeightLabel">Enter weight</string>
    <string name="pSWeightET">Weight (kg)</string>
    <string name="pSGoalLabel">Select your body goal</string>
    <string name="pSActivityLabel">Select your activity level</string>
    <string name="tvProfileSetupInfo">Configure your profile</string>
    <string name="pSCreateButton">Create</string>
    <string name="pSGenderM">Male</string>
    <string name="pSGenderF">Female</string>
    <string name="pSLoseWeight">Lose weight</string>
    <string name="pSHoldWeight">Keep your weight</string>
    <string name="pSGainMuscle">Gain muscle</string>
    <string-array name="activityLevels">
        <item>1.2 Person who lay in bed, no motion at all</item>
        <item>1.4 Sitting work or student average of 4–6k steps a day</item>
        <item>1.6 Standing work (e.g. housework, shop assistant)</item>
        <item>1.7 More than 11k steps a day. (Physical work or 4–5 workouts weekly)</item>
        <item>2.0 Professional athlete or more than 6 workouts a week</item>
    </string-array>
    <!-- Text in menu that appears after click 3 dots button on meal  -->
    <string name="tvCopyMealText">Copy entire meal</string>
    <string name="tvClearMealText">Clear this meal</string>
    <!-- Text in activity where you can search for products -->
    <string name="searchProdLabel">Search</string>
    <string name="favProdLabel">Favourites</string>
    <!-- Text in one row view on RV in searching products process is done -->
    <string name="foundProdCaloriesLabel">Serving qty:</string>
    <string name="foundProdWeightLabel">Serving unit:</string>
    <!-- Login Activity -->
    <string name="loginLabel">Login:</string>
    <string name="loginETHint">Email</string>
    <string name="passwordLoginLabel">Password:</string>
    <string name="passwordETHint">Enter your password</string>
    <string name="loginBtnLabel">Login</string>
    <string name="goToRegister">Do not have an account?
        <b>Register now.</b>
    </string>
    <string name="emailVerificationDialog">Looks like You do not verify your email address.</string>
    <string name="emailVerificationDialog2">You cannot use this app without verified E-mail.</string>
    <string name="emailVerificationDialog3">Do You want to receive verification E-mail?</string>
    <string name="resetPasswordTV">Forgot Your password?
        <b>Reset!</b>
    </string>
    <string name="resetYourPassword">Enter your E-mail</string>
    <!-- Register Activity -->
    <string name="emailRegisterETHint">Email</string>
    <string name="registerBtnLabel">Register</string>
    <string name="goToLogin">Already have an account?
        <b>Sign in.</b>
    </string>
    <!-- Add weight Activity -->
    <string name="customWeightLabel">g</string>
    <string name="halfHundred">50g</string>
    <string name="hundredLabel">100g</string>
    <!-- Appearance of one product -->
    <string name="weightLabel">Weight:</string>
    <string name="caloriesLabel">Calories:</string>
    <string name="proteinsLabel">Proteins:</string>
    <string name="fatLabel">Fat:</string>
    <string name="carbsLabel">Carbs:</string>
    <!-- Update a product -->
    <string name="updateLabelText">Enter new weight:</string>
    <string name="editTextUpdateText">ex. 124</string>
    <string name="updateButtonLabelText">Update</string>
    <!-- Navigation Drawer -->
    <string name="navDrawerProfileSettings">Profile Settings</string>
    <string name="creditsLabel">About Us</string>
    <string name="logout">Logout</string>
    <string name="waterControl">Water Control</string>
    <!-- Credits -->
    <string name="version">Version: 1.0</string>
    <string name="ownerLabel">Develop By:</string>
    <string name="ownerName">Milosz Kowalski</string>
    <!-- Water Amount Activity -->
    <string name="waterLabel">Today You have drunk:</string>
</resources>