<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".profile_setup.ActivitySetupProfile">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_margin="4dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout2">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/tvNicknameLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:text="@string/pSNicknameLabel"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/pSNicknameET"
                    android:ems="10"
                    android:id="@+id/etProfileNickname"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/tvAgeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:text="@string/pSAgeLabel"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/psAgeET"
                    android:id="@+id/etProfileAge"
                    android:layout_weight="1"/>

        </LinearLayout>

        <TextView
                android:id="@+id/tvGenderLabel"
                android:text="@string/pSGenderLabel"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:layout_margin="2dp"/>
        <RadioGroup
                android:id="@+id/rgGender"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:layout_margin="2dp">
            <RadioButton
                    android:text="@string/pSGenderM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rbMale"/>
            <RadioButton
                    android:text="@string/pSGenderF"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/rbFemale"/>
        </RadioGroup>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/tvHeightLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pSHeightLabel"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:hint="@string/pSHeightET"
                    android:id="@+id/etProfileHeight"
                    android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_margin="2dp">

            <TextView
                    android:id="@+id/tvWeightLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    android:text="@string/pSWeightLabel"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:hint="@string/pSWeightET"
                    android:id="@+id/etProfileWeight"
                    android:layout_weight="1"/>

        </LinearLayout>

        <TextView
                android:id="@+id/tvGoalLabel"
                android:text="@string/pSGoalLabel"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:layout_margin="2dp"/>

        <RadioGroup
                android:id="@+id/rgBodyGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:layout_margin="2dp">
            <RadioButton
                    android:text="@string/pSLoseWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbLooseWeight"/>
            <RadioButton
                    android:text="@string/pSHoldWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbKeepWeight"/>

            <RadioButton
                    android:text="@string/pSGainMuscle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbGainMuscle"/>
        </RadioGroup>

        <TextView
                android:id="@+id/tvActivityLabel"
                android:text="@string/pSActivityLabel"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:layout_margin="2dp"/>

        <Spinner
                android:id="@+id/spinnerActivityLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/activityLevels"
                android:padding="2dp"
                android:layout_margin="2dp"/>

    </LinearLayout>
    <TextView
            android:id="@+id/tvProfileSetupInfo"
            android:text="@string/tvProfileSetupInfo"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/btnProfileCreate"
            android:text="@string/pSCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>