<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvVersion"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"/>
    <TextView
            android:text="@string/ownerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvOwner"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvVersion"
            android:layout_marginTop="4dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/ownerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvOwnerName"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvOwner"
            android:layout_marginTop="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>